WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35357
Two editing tests fail after DumpRenderTree run loop changes
https://bugs.webkit.org/show_bug.cgi?id=35357
Summary
Two editing tests fail after DumpRenderTree run loop changes
Alexey Proskuryakov
Reported
2010-02-24 13:18:36 PST
I'm not sure why exactly this happens, and it's possible that the tests aren't quite right - but there is a less invasive fix for the Java plug-in that we can use for now.
Attachments
proposed fix
(3.14 KB, patch)
2010-02-24 13:23 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(5.61 KB, patch)
2010-02-24 13:42 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
your wish is my command
(3.46 KB, patch)
2010-02-24 13:54 PST
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-02-24 13:23:15 PST
Created
attachment 49427
[details]
proposed fix
mitz
Comment 2
2010-02-24 13:37:13 PST
Comment on
attachment 49427
[details]
proposed fix Can’t DumpRenderTree be modified to use an NSApplication subclass? I don’t think it’s necessary to resort to runtime trickery.
Alexey Proskuryakov
Comment 3
2010-02-24 13:42:09 PST
Created
attachment 49432
[details]
proposed fix
Alexey Proskuryakov
Comment 4
2010-02-24 13:54:59 PST
Created
attachment 49433
[details]
your wish is my command
Alexey Proskuryakov
Comment 5
2010-02-24 13:58:54 PST
Committed revision 55200.
Simon Fraser (smfr)
Comment 6
2013-07-30 21:18:12 PDT
This change made DRT run a busyloop while waiting for tests to complete, rather than idling the event loop.
Simon Fraser (smfr)
Comment 7
2013-07-30 21:34:23 PDT
Fixing via
bug 119317
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug